--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@ body {
    
 }
 
-h1, h2, p, button {
+h1, h2,h3, p, button {
     font-family: 'Bai Jamjuree', sans-serif;
     padding-left: 0.8em ;
     padding-right: 0.8em ;
+    text-align: center;
     
 }
-h1,h2 {
+h1,h2,h3 {
     color: #4B545C;
     font-weight: bold;
 }
@@ -49,6 +50,10 @@ p {
     background-color: #6073FF;
     box-shadow: 9px 8px 15px -2px rgba(96,115,255,0.65);
    
+}
+
+section {
+    margin-top: 8.5em;
 }
 
 
@@ -90,5 +95,10 @@ header img {
     gap: 1.5em;
     margin-top:2em;
     
+}
+header {
+    background-image: url("images/bg-header-desktop.png");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 }
