--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 body {
     margin: 0;
     
+    
    
 }
 
@@ -106,6 +107,20 @@ main img {
     
     margin-top:5em;
 }
+
+.functions {
+    display: flex;
+    flex-direction: column;
+    
+    gap:2em;
+}
+
+.section2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:4em;}
+
 /*********FOOTER********/
 /*********RESPONSIVE****/
 
