--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ h1,h2,h3 {
     font-weight: bold;
 }
 
+li {color: #4B545C;
+    font-family: 'Bai Jamjuree', sans-serif;
+}
+
 p {
     font-size:18px;
     color: #9EABB1;
@@ -165,6 +169,53 @@ main img {
         }
 
 /*********FOOTER********/
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+    margin-top:6em;
+    background-color: #f2f2f2;
+}
+
+.logofooter {
+    width:12%;
+    height:auto;
+    margin-top: 2em;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0;
+    
+    
+    gap:1em;
+}
+
+.medialogo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap:3em;
+    margin-bottom: 2em;
+}
+
+.fa-brands:hover{
+    cursor: pointer;
+    color: #26BAA4;
+    
+}
+
+li:hover{
+    cursor: pointer;
+    opacity: 0.5;
+    color: #26BAA4;
+}
+
 /*********RESPONSIVE****/
 
 @media  (min-width: 768px) {
