--- a/style.css
+++ b/style.css
@@ -126,6 +126,13 @@ main img {
     align-items: center;
     gap:4em;}
 
+
+    .imgComputer{
+        position: relative;
+    }
+       
+    
+
     .section3 {
         display: flex;
         flex-direction: column;
@@ -159,7 +166,14 @@ main img {
             flex-direction: column;
             align-items: center;
             gap: 6em;
+            margin-top: 3em;
             
+        }
+
+        .logocompany img {
+            width:40%;
+
+            height:auto;
         }
 
         .section5 {
@@ -191,8 +205,6 @@ ul {
     flex-direction: column;
     align-items: center;
     padding-left: 0;
-    
-    
     gap:1em;
 }
 
@@ -223,25 +235,17 @@ li:hover{
     
 
 .downloadbutton {
-    display: flex;
-    flex-direction: row;
-    gap: 1.5em;
-    margin-top:2em;
-    
+    flex-direction: row;  
 }
 header {
     background-image: url("images/bg-header-desktop.png");
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 .storingfunction {
-    display: flex;
     flex-direction: row;
 }
 
 .textfunctions p , .textfunctions h3 {
-    display: flex;
     flex-direction: column;
     text-align: left; 
     
@@ -250,9 +254,12 @@ header {
 .margin{
    width: 60%;
 }
+.imgComputer{
+    position: relative;
+    left:-50px;
+}
 
 .logosection {
-    display:flex;
     flex-direction: row;
     justify-content: space-between;
     margin-left: 3em;
@@ -265,7 +272,6 @@ header {
 }
 
 .logocompany {
-    display: flex;
     flex-direction: row;
     justify-content: center;
     margin-right:2em ;
@@ -279,5 +285,36 @@ header {
     height:auto;
 }
 
-
+footer {
+    flex-direction: row;
+    justify-content: space-around;
+    padding:2em; 
 }
+
+ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+     grid-gap: 20px;
+}
+      /* Define specific position of the elements in the grid */
+      /* grid-row = lign */ 
+      /* nth-child ( the "li" ) */ 
+    li:nth-child(1) {
+        grid-row: 1;
+    }
+
+    li:nth-child(2) {
+        grid-row: 2 ;
+    }
+    li:nth-child(4) {
+        grid-row: 2;
+    }
+
+    .logofooter {
+        width:8%;
+        height:auto;
+        margin:0;
+    }
+}
+
+
