--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 /*********GENERAL*********/
 
 body {
-    margin: 0;
+    margin: 0 auto;
+    max-width: 1200px;
     
     
    
@@ -111,6 +112,7 @@ main img {
     gap: 1.5em;
     
     margin-top:5em;
+    overflow: hidden;
 }
 
 .functions {
